Fixed scrollbar issue. Hidden, although scrollable

--- a/src/Header.css
+++ b/src/Header.css
@@ -5,7 +5,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* overflow-x: scroll; */
+  overflow-x: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.header::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.header {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .header__icons {
